Criando a entidade usuario.

--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -19,6 +19,8 @@
 		<font color="000000">&nbsp; FA7 Twitter &nbsp</font>
 		<font size="1" color="CC0000">0.0.1 beta&nbsp;&nbsp;</font>
 		<font size="1" color="000000">|&nbsp;</font>
+		<font size="1" color="000000" wicket:id="name">teste Nome</font>
+		<font size="1" color="000000">|&nbsp;</font>
 		<A class="menu" href="http://127.0.0.1:8080/ponto/pages/lista_usuarios.jsp">&nbsp;menu1 </A>
 		<A class="menu" href="http://127.0.0.1:8080/ponto/pages/lista_usuarios.jsp">&nbsp;menu2 </A>
 		<A class="menu" wicket:id="lkManager" href="http://127.0.0.1:8080/ponto/pages/relatorioPeriodo_.jsp">&nbsp;menu3 </A>
