Ajuste nos menus

--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -21,13 +21,7 @@
 		<font size="1" color="000000">|&nbsp;</font>
 		<font size="1" color="000000" wicket:id="name">teste Nome</font>
 		<font size="1" color="000000">|&nbsp;</font>
-		<A class="menu" href="http://127.0.0.1:8080/ponto/pages/lista_usuarios.jsp">&nbsp;menu1 </A>
-		<A class="menu" href="http://127.0.0.1:8080/ponto/pages/lista_usuarios.jsp">&nbsp;menu2 </A>
-		<A class="menu" wicket:id="lkManager" href="http://127.0.0.1:8080/ponto/pages/relatorioPeriodo_.jsp">&nbsp;menu3 </A>
-		<A class="menu" wicket:id="lkKanban" href="http://127.0.0.1:8080/ponto/pages/relatorioDia_.jsp">&nbsp;menu4 </A>
-		<A class="menu" href="http://127.0.0.1:8080/ponto/pages/relatorioDia_.jsp">&nbsp;menu5&nbsp;</A>
-		<A class="menu" wicket:id="lkNewActivity" href="">&nbsp;menu6&nbsp;</A>
-		<A class="menu" wicket:id="lkSobre" href="">&nbsp;menu7&nbsp;</A>
+		<A class="menu" wicket:id="lkSobre" href="">&nbsp;Sobre&nbsp;</A>
 	</div>
 	
 	<div id="status_div">
