--- a/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
@@ -9,7 +9,7 @@
 		<TD>
 			Enviar Mensagem:<br>
 			<form wicket:id="form" action="#">
-				<textarea wicket:id="taMsg" rows="3" cols="60"></textarea><br>
+				<textarea wicket:id="taMsg" rows="3" cols="60"/><br>
 				<input type="submit" />
 			</form>
 		</TD>
@@ -25,7 +25,7 @@
 	<TR>
 		<TD>
 		<span wicket:id="lvMsg"> 
-		-> <span wicket:id="msg">label</span><br/>
+		-> <span wicket:id="msg"/><br/>
 		</span>
 		</TD>
 	</TR>
