--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -21,6 +21,9 @@
 		<font size="1" color="000000">|&nbsp;</font>
 		<font size="1" color="000000" wicket:id="name">teste Nome</font>
 		<font size="1" color="000000">|&nbsp;</font>
+		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
+		<A class="menu" wicket:id="lkUserMessage" href="">&nbsp;Mensagens </A>
+		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 		<A class="menu" wicket:id="lkSobre" href="">&nbsp;Sobre&nbsp;</A>
 	</div>
 	
