Criacao de mensagens hardcoded, exibindo usuario na pagina principal, tentativa de carrregar as mensagens do usuario logado na pagina logada

--- a/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
@@ -4,7 +4,7 @@
 <TABLE style="width: 90%;">
 <TBODY>
 	<TR>
-		<TH>Mensagens: <span wicket:id="lbSize">0</span> </TH>
+		<TH><span wicket:id="lbSize">0</span> mensagens de <span wicket:id="lbUserName">nome</span> </TH>
 	</TR>
 	<TR>
 		<TD>
