--- a/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
@@ -25,7 +25,7 @@
 	<TR>
 		<TD>
 		<span wicket:id="lvMsg"> 
-		-> <span wicket:id="msg"/><br/>
+		  <span wicket:id="userName"/> -> <span wicket:id="msg"/><br/>
 		</span>
 		</TD>
 	</TR>
