funcionalidade de seguir usuario\n criado link para acessar pagina do tiago\n pagina de mensages recebe um usuario para montar seus dados

--- a/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
@@ -10,14 +10,16 @@
 	<TABLE>
 		<TBODY>
 			<TR> 
-				<TD><span wicket:id="lbUserNameHeader" > nome </span> </TD>
-				<TD>nao esta seguindo niguem</TD> 
+				<TD><span wicket:id="lbUserNameHeader" > nome 
+					</span></TD>
+				<TD><span wicket:id="lbSeguindoCount" > nao esta seguindo niguem
+					</span></TD> 
 			</TR>
 			<TR>
 				<TD colspan="2">
 					<form wicket:id="form" action="#">
-						<span wicket:id="lbFolowing" />
-						<input type="submit" value="Seguir" />
+						<input wicket:id="btnSeguir" type="submit" value="Seguir" />
+						<input wicket:id="btnAbandonar" type="submit" value="Abandonar" />
 					</form>
 				</TD>
 			</TR> 
