--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -25,6 +25,7 @@
 		<A class="menu" wicket:id="lkUserMessage" href="">&nbsp;Mensagens </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 		<A class="menu" wicket:id="lkSobre" href="">&nbsp;Sobre&nbsp;</A>
+		<A class="menu" wicket:id="lkTiago" href="">&nbsp;Tiago&nbsp;</A>
 	</div>
 	
 	<div id="status_div">
