Utilizando URLs amigaveis

--- a/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
@@ -33,7 +33,7 @@
 					</TH>
 			</TR>
 			<TR>
-				<TD><span wicket:id="lvListMsg"> <input type="submit" />
+				<TD><span wicket:id="lvListMsg"> 
 						-> <span wicket:id="msg" /><br />
 				</span></TD>
 			</TR>
