Correcao da Home e Pagina pessoal

--- a/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
@@ -17,15 +17,20 @@
 </TBODY>
 </TABLE>
 <br>
-<TABLE style="width: 60%;">
+<TABLE style="width: 50%;">
 <TBODY>
 	<TR>
-		<TH>Mensagens: <span wicket:id="lbSize">0</span> </TH>
+		<TH>
+			<span wicket:id="lbUserName"/> tem 
+			<span wicket:id="lbSize">0</span> mensagens:
+		</TH>
 	</TR>
 	<TR>
 		<TD>
 		<span wicket:id="lvMsg"> 
-		  <span wicket:id="userName"/> -> <span wicket:id="msg"/><br/>
+			<span wicket:id="userMsg"/> <span wicket:id="login"/>:<br/>
+			<span wicket:id="msg"/>
+			<hr/>
 		</span>
 		</TD>
 	</TR>
