--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -18,11 +18,9 @@
 		<img alt="" src="favicon.png" width="15px" height="15px" />
 		<font color="000000">&nbsp; FA7 Twitter &nbsp</font>
 		<font size="1" color="CC0000">0.0.1 beta&nbsp;&nbsp;</font>
-		<font size="1" color="000000">|&nbsp;</font>
-		<font size="1" color="000000" wicket:id="name">teste Nome</font>
-		<font size="1" color="000000">|&nbsp;</font>
+		<font size="1" color="000000">|&nbsp;</font>		
+		<A class="menu" wicket:id="lkUserMessage" href=""><font size="1" wicket:id="name"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
-		<A class="menu" wicket:id="lkUserMessage" href="">&nbsp;Mensagens </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 		<!-- 
 		<A class="menu" wicket:id="lkSobre" href="">&nbsp;Sobre&nbsp;</A>
