--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -22,9 +22,7 @@
 		<A class="menu" wicket:id="lkUserMessage" href=""><font size="1" wicket:id="name"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
-		<!-- 
-		<A class="menu" wicket:id="lkSobre" href="">&nbsp;Sobre&nbsp;</A>
-		 -->
+		<A class="menu" wicket:id="lkLogin" href="">&nbsp;Login&nbsp;</A>
 	</div>
 	
 	<div id="status_div">
