melhorando o visual da aplicação.

--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -16,8 +16,8 @@
 	
 	<div id="menu_div">&nbsp;
 		<img alt="" src="favicon.png" width="15px" height="15px" />
-		<font color="000000">&nbsp; FA7 Twitter &nbsp</font>
-		<font size="1" color="CC0000">0.0.1 beta&nbsp;&nbsp;</font>
+		<font color="FFFFFF">&nbsp; FA7 Twitter &nbsp</font>
+		<font size="1" color="0066CC">0.0.1 beta&nbsp;&nbsp;</font>
 		<font size="1" color="000000">|&nbsp;</font>		
 		<A class="menu" wicket:id="lkUserMessage" href=""><font size="1" wicket:id="name"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
@@ -27,9 +27,7 @@
 	
 	<div id="status_div">
 		<span class="labelusuario" ></span>
-		<!-- 
 		<A class="menu"  href="http://127.0.0.1:8080/ponto/pages/sair.jsp">&nbsp;Sair&nbsp;</A>
-		 -->
 	</div>
 	
 	<wicket:child/>
