--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" />
 		
 	</head>
-	<body>
+	<body onload="setFocus()">
 	<img src="imagens/wallpaper.jpg" class="bg" />
 	
 	
@@ -22,7 +22,6 @@
 		<A class="menu" wicket:id="lkUserMessage" href=""><font size="1" wicket:id="name"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
-		<A class="menu" wicket:id="lkLogin" href="">&nbsp;Login&nbsp;</A>
 	</div>
 	
 	<div id="status_div">
