melhorando o visual da aplicação.

--- a/src/main/java/br/com/fa7/twitter/pages/FindUserPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/FindUserPage.html
@@ -36,7 +36,7 @@
 	<TR>
 		<TD>
 		<span wicket:id="lvListUsers">
-		-> <a wicket:id="lkname"><span wicket:id="name">0</span></a><br/>
+		-> <a wicket:id="lkname">@<span wicket:id="login">0</span></a><br/>
 		</span>
 		</TD>
 	</TR>
