--- a/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/UserMessagePage.html
@@ -10,7 +10,7 @@
 			<TR>
 				<TD colspan="2">
 					Seguidos: <span wicket:id="lbFollowingCount2"> 0 </span><br>
-					Seguidores: 12 <br><br>
+					Seguidores: <span wicket:id="lbFollowersCount2"> 0 </span><br><br>
 					<form wicket:id="form" action="#">
 						<input wicket:id="btnSeguir" type="submit" value="Seguir" />
 						<input wicket:id="btnAbandonar" type="submit" value="Abandonar" />
