--- a/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
@@ -29,7 +29,8 @@
 		<TD height="100px">
 		<div style="width:400px;height:250px;overflow: auto;">
 		<span wicket:id="lvMsg"> 
-			<span wicket:id="userMsg"/> <span wicket:id="login"/>:<br/>
+<!-- 			<span wicket:id="userMsg"/>  -->
+			<a href="#"><span wicket:id="login"/></a>:<br/>
 			<span wicket:id="msg"/>
 			<hr/>
 		</span>
