--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -19,7 +19,7 @@
 		<font color="FFFFFF">&nbsp; FA7 Twitter &nbsp</font>
 		<font size="1" color="0066CC">0.0.1 beta&nbsp;&nbsp;</font>
 		<font size="1" color="000000">|&nbsp;</font>		
-		<A class="menu" wicket:id="lkUserMessage" href=""><font size="1" wicket:id="name"/></A>
+		<A class="menu" wicket:id="lkUserMessage" href="">@<font size="1" wicket:id="login"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 	</div>
