--- a/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
@@ -52,6 +52,7 @@
 			
 			
 	<div id="status_div">
+		<marquee style="width: 77%; height: 7px" direction="left" ><a href="#">~(‾▿‾)~</a></marquee>
 		Se você não possui cadastro <a class="status" wicket:id="lkCadastro">clique aqui</a>
 	</div>		
 			
