--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -23,9 +23,10 @@
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 	</div>
-	
+
 	<div id="status_div">
 		<span class="labelusuario" ></span>
+		<marquee style="width: 77%; height: 7px" direction="left" ><a href="#">~(‾▿‾)~</a></marquee>
 		<A class="menu"  href="http://127.0.0.1:8080/ponto/pages/sair.jsp">&nbsp;Sair&nbsp;</A>
 	</div>
 	
