#9 implementando o controlde de usuario.

--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -27,7 +27,7 @@
 	<div id="status_div">
 		<span class="labelusuario" ></span>
 		<marquee style="width: 77%; height: 7px" direction="left" ><a href="#">~(‾▿‾)~</a></marquee>
-		<A class="menu"  href="http://127.0.0.1:8080/ponto/pages/sair.jsp">&nbsp;Sair&nbsp;</A>
+		<A class="menu"  href="#" wicket:id="lkLogoff">&nbsp;Sair&nbsp;</A>
 	</div>
 	
 	<wicket:child/>
