Colocando validacao nas telas de login e registro de usuario. #9

--- a/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
@@ -32,15 +32,18 @@
 					<TH colspan="2" >Acesso</TH>
 				</TR>
 				<TR>
+					<TD colspan="2"><span wicket:id="feedback"></span></TD>
+				</TR>
+				<TR>
 					<TD>Login:</TD>
 					<TD>
-						<input type="text" wicket:id="tLogin" id="login"/>
+						<input type="text" wicket:id="login" id="login"/>
 					</TD>
 				</TR>	
 				<TR>
 					<TD>Senha:</TD>
 					<TD>
-						<input type="password" wicket:id="tSenha" />
+						<input type="password" wicket:id="senha" />
 					</TD>
 				</TR>	
 				<TR>
