--- a/src/main/java/br/com/fa7/twitter/pages/RegisterPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/RegisterPage.html
@@ -32,11 +32,13 @@
 					<TH colspan="2" >Registro</TH>
 				</TR>
 				<TR>
+					<TD colspan="2"><span wicket:id="feedback"></span></TD>
+				</TR>
+				<TR>
 					<TD>Nome:</TD>
 					<TD>
 						<input type="text" wicket:id="tNome" id="nome"/>
 					</TD>
-				
 				</TR>	
 				<TR>
 					<TD>Email:</TD>
