Integrando as camadas de cadastro de usuario.

--- a/src/main/java/br/com/fa7/twitter/pages/RegisterPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/RegisterPage.html
@@ -37,25 +37,25 @@
 				<TR>
 					<TD>Nome:</TD>
 					<TD>
-						<input type="text" wicket:id="tNome" id="nome"/>
+						<input type="text" wicket:id="name" id="nome"/>
 					</TD>
 				</TR>	
 				<TR>
 					<TD>Email:</TD>
 					<TD>
-						<input type="text" wicket:id="tEmail" />
+						<input type="text" wicket:id="email" />
 					</TD>
 				</TR>
 				<TR>
 					<TD>Login:</TD>
 					<TD>
-						<input type="text" wicket:id="tLogin" id="login"/>
+						<input type="text" wicket:id="login" id="login"/>
 					</TD>
 				</TR>	
 				<TR>
 					<TD>Senha:</TD>
 					<TD>
-						<input type="password" wicket:id="tSenha" />
+						<input type="password" wicket:id="password" />
 					</TD>
 				</TR>	
 				<TR>
@@ -65,6 +65,10 @@
 				</TABLE>
 			</form>	
 			
+	<div id="status_div">
+		<marquee style="width: 77%; height: 7px" direction="left" ><a href="#">~(‾▿‾)~</a></marquee>
+		<a class="status" wicket:id="lkLogin">Login</a>
+	</div>
 			
 </body>
 </html>
