--- a/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/LoginPage.html
@@ -5,9 +5,9 @@
 		<title>FA7 Twitter</title>
 		<link rel="shortcut icon" href="favicon.png" />
 		<link rel="stylesheet" href="css/base.css" type="text/css" media="screen" title="Stylesheet" />
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" />
+		<!--  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script> 
+		<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" />-->
 		<script type="text/javascript">
 			function setFocus()
 			{
@@ -26,7 +26,7 @@
 
 	<BR><BR><BR><BR><BR><BR><BR>
 	
-			<form wicket:id="form" action="#">
+			<form wicket:id="form" action="#" method="post">
 				<TABLE style="width: 20%;">
 				<TR>
 					<TH colspan="2" >Acesso</TH>
