--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -19,6 +19,7 @@
 		<font color="FFFFFF">&nbsp; FA7 Twitter &nbsp</font>
 		<font size="1" color="0066CC">0.0.1 beta&nbsp;&nbsp;</font>
 		<font size="1" color="000000">|&nbsp;</font>		
+		<a class="menu" href="#" wicket:id="lkLogin">&nbsp;Entrar&nbsp;</A>
 		<A class="menu" wicket:id="lkUserMessage" href="">@<font size="1" wicket:id="login"/></A>
 		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
 		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
@@ -27,7 +28,7 @@
 	<div id="status_div">
 		<span class="labelusuario" ></span>
 		<marquee style="width: 77%; height: 7px" direction="left" ><a href="#">~(‾▿‾)~</a></marquee>
-		<A class="menu"  href="#" wicket:id="lkLogoff">&nbsp;Sair&nbsp;</A>
+		<a class="menu" href="#" wicket:id="lkLogoff">&nbsp;Sair&nbsp;</A>
 	</div>
 	
 	<wicket:child/>
