Teste Funcional BuscarPessoas

--- a/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
+++ b/src/main/java/br/com/fa7/twitter/pages/base/PageBase.html
@@ -19,10 +19,10 @@
 		<font color="FFFFFF">&nbsp; FA7 Twitter &nbsp</font>
 		<font size="1" color="0066CC">0.0.1 beta&nbsp;&nbsp;</font>
 		<font size="1" color="000000">|&nbsp;</font>		
-		<a class="menu" href="#" wicket:id="lkLogin">&nbsp;Entrar&nbsp;</A>
-		<A class="menu" wicket:id="lkUserMessage" href="">@<font size="1" wicket:id="login"/></A>
-		<A class="menu" wicket:id="lkHome" href="">&nbsp;Home </A>
-		<A class="menu" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
+		<a class="menu" id="lkLogin" href="#" wicket:id="lkLogin">&nbsp;Entrar&nbsp;</A>
+		<A class="menu" id="lkUserMessage"wicket:id="lkUserMessage" href="">@<font size="1" wicket:id="login"/></A>
+		<A class="menu" id="lkHome" wicket:id="lkHome" href="">&nbsp;Home </A>
+		<A class="menu" id="lkFindUser" wicket:id="lkFindUser" href="">&nbsp;Buscar </A>
 	</div>
 
 	<div id="status_div">
