Criacao da pagina de teste profile. Garantia que os testes estao na pagina certa pelo loadPage. Correcao de Id para o teste de enviar msg

--- a/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/PrincipalPage.html
@@ -9,7 +9,7 @@
 		<TD>
 			Enviar Mensagem:<br>
 			<form wicket:id="form" action="#">
-				<textarea wicket:id="taMsg" rows="3" cols="57"/><br>
+				<textarea id="taMsg" wicket:id="taMsg" rows="3" cols="57"/><br>
 				<input type="submit" />
 			</form>
 		</TD>
