separar os pageObject dos testes. melhora nos asserts dos testes de busca. utilizacao de headers nas tables de busca

--- a/src/main/java/br/com/fa7/twitter/pages/FindUserPage.html
+++ b/src/main/java/br/com/fa7/twitter/pages/FindUserPage.html
@@ -10,11 +10,13 @@
 	<BR><BR><BR><BR><BR><BR><BR>
 <br>
 
-<TABLE style="width: 10%;" >
-<TBODY>
+<TABLE id="busca" style="width: 10%;" >
+<THEAD>
 	<TR>
 		<TH>Busca </TH>
-	</TR>
+	</TR> 
+</THEAD>
+<TBODY>
 	<TR>
 		<TD>
 			<form wicket:id="form" action="#">
@@ -28,11 +30,13 @@
 
 <br><br>
 
-<TABLE style="width: 30%;">
-<TBODY>
+<TABLE id="resultado" style="width: 30%;">
+<THEAD>
 	<TR>
 		<TH>Usuarios: <span wicket:id="lbSize">0</span></TH>
-	</TR>
+	</TR> 
+</THEAD>
+<TBODY>
 	<TR>
 		<TD>
 		<span wicket:id="lvListUsers">
